infrastructure/kubernetes/base/monitoring/manifests/http-route-nginx.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: nginx
spec:
  parentRefs:
    - name: traefik-gateway
  hostnames:
    - preprod.djepenodev.ink
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: nginx
          port: 80
