infrastructure/kubernetes/base/monitoring/manifests/http-route-prometheus.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: prometheus
  namespace: monitoring
spec:
  parentRefs:
    - name: preprod
      namespace: networking
  hostnames:
    - prometheus.preprod.djepenodev.ink
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: monitoring-kube-prometheus-prometheus
          port: 9090
